LuaPlus/Src/LuaPlus/src/lua.h



/*
** pseudo-indices
*/
#define LUA_REGISTRYINDEX	(-10000)
#define LUA_GLOBALSINDEX	(-10002)


typedef struct lua_State lua_State;


typedef int (*lua_CFunction) (lua_State *L);


typedef const char * (*lua_Reader) (lua_State *L, void *ud, size_t *sz);


typedef int (*lua_Writer) (lua_State *L, const void* p, size_t sz, void* ud);



/*
** basic types
*/
#define LUA_TNONE		(-1)

#define LUA_TNIL		0
#define LUA_TBOOLEAN		1
#define LUA_TLIGHTUSERDATA	2
#define LUA_TNUMBER		3
#define LUA_TSTRING		4
#define LUA_TTABLE		5
#define LUA_TFUNCTION		6
#define LUA_TUSERDATA		7
#define LUA_TTHREAD		8
#define LUA_TWSTRING	9


/* type of numbers in Lua */
typedef LUA_NUMBER lua_Number;



/* type for integer functions */
typedef LUA_INTEGER lua_Integer;

LUA_API void       (lua_close) (lua_State *L);



/*
** basic stack manipulation
*/
LUA_API int   (lua_gettop) (lua_State *L);

LUA_API void  (lua_settop) (lua_State *L, int idx);

LUA_API void  (lua_pushvalue) (lua_State *L, int idx);

LUA_API void  (lua_remove) (lua_State *L, int idx);

LUA_API void  (lua_insert) (lua_State *L, int idx);

LUA_API void  (lua_replace) (lua_State *L, int idx);

LUA_API int   (lua_checkstack) (lua_State *L, int sz);


LUA_API void  (lua_xmove) (lua_State *from, lua_State *to, int n);



/*
** access functions (stack -> C)
*/

LUA_API int             (lua_isnumber) (lua_State *L, int idx);

LUA_API int             (lua_isstring) (lua_State *L, int idx);

LUA_API int             (lua_iscfunction) (lua_State *L, int idx);

LUA_API int             (lua_isuserdata) (lua_State *L, int idx);

LUA_API int             (lua_type) (lua_State *L, int idx);


LUA_API int            (lua_equal) (lua_State *L, int idx1, int idx2);

LUA_API int            (lua_rawequal) (lua_State *L, int idx1, int idx2);

LUA_API int            (lua_lessthan) (lua_State *L, int idx1, int idx2);


LUA_API lua_Number      (lua_tonumber) (lua_State *L, int idx);

LUA_API int             (lua_toboolean) (lua_State *L, int idx);

LUA_API lua_CFunction   (lua_tocfunction) (lua_State *L, int idx);

LUA_API void	       *(lua_touserdata) (lua_State *L, int idx);



/*
** push functions (C -> stack)
*/
LUA_API void  (lua_pushnil) (lua_State *L);

LUA_API void  (lua_pushnumber) (lua_State *L, lua_Number n);

LUA_API void  (lua_pushinteger) (lua_State *L, lua_Integer n);

LUA_API void  (lua_pushlstring) (lua_State *L, const char *s, size_t l);

LUA_API void  (lua_pushstring) (lua_State *L, const char *s);

LUA_API void  (lua_pushcclosure) (lua_State *L, lua_CFunction fn, int n);

LUA_API void  (lua_pushboolean) (lua_State *L, int b);

LUA_API void  (lua_pushlightuserdata) (lua_State *L, void *p);

LUA_API int   (lua_pushthread) (lua_State *L);



/*
** get functions (Lua -> stack)
*/
LUA_API void  (lua_gettable) (lua_State *L, int idx);

LUA_API void  (lua_getfield) (lua_State *L, int idx, const char *k);

LUA_API void  (lua_rawget) (lua_State *L, int idx);

LUA_API void  (lua_rawgeti) (lua_State *L, int idx, int n);

LUA_API void  (lua_createtable) (lua_State *L, int narr, int nrec);

LUA_API void *(lua_newuserdata) (lua_State *L, size_t sz);

LUA_API int   (lua_getmetatable) (lua_State *L, int objindex);

LUA_API void  (lua_getfenv) (lua_State *L, int idx);



/*
** set functions (stack -> Lua)
*/
LUA_API void  (lua_settable) (lua_State *L, int idx);

LUA_API void  (lua_setfield) (lua_State *L, int idx, const char *k);

LUA_API void  (lua_rawset) (lua_State *L, int idx);

LUA_API void  (lua_rawseti) (lua_State *L, int idx, int n);

LUA_API int   (lua_setmetatable) (lua_State *L, int objindex);

LUA_API int   (lua_setfenv) (lua_State *L, int idx);



/*
** `load' and `call' functions (load and run Lua code)
*/
LUA_API void  (lua_call) (lua_State *L, int nargs, int nresults);

LUA_API int   (lua_pcall) (lua_State *L, int nargs, int nresults, int errfunc);

LUA_API int   (lua_cpcall) (lua_State *L, lua_CFunction func, void *ud);

LUA_API int   (lua_load) (lua_State *L, lua_Reader reader, void *dt,
                                        const char *chunkname);

LUA_API int   (lua_wload) (lua_State *L, lua_Reader reader, void *data,
                      const char *chunkname);


LUA_API int (lua_dump) (lua_State *L, lua_Writer writer, void *data, int strip, char endian);



/*
** coroutine functions
*/
LUA_API int  (lua_yield) (lua_State *L, int nresults);

LUA_API int  (lua_resume) (lua_State *L, int narg);

LUA_API int  (lua_status) (lua_State *L);

LUA_API int (lua_gc) (lua_State *L, int what, int data);



/*
** miscellaneous functions
*/

LUA_API int   (lua_error) (lua_State *L);


LUA_API int   (lua_next) (lua_State *L, int idx);


LUA_API void  (lua_concat) (lua_State *L, int n);

#define lua_newtable(L)		lua_createtable(L, 0, 0)

#define lua_strlen(L,i)		lua_objlen(L, (i))
#define lua_isnil(L,n)		(lua_type(L, (n)) == LUA_TNIL)
#define lua_isboolean(L,n)	(lua_type(L, (n)) == LUA_TBOOLEAN)

#define lua_setglobal(L,s)	lua_setfield(L, LUA_GLOBALSINDEX, (s))
#define lua_getglobal(L,s)	lua_getfield(L, LUA_GLOBALSINDEX, (s))

#define lua_tostring(L,i)	lua_tolstring(L, (i), NULL)



/*
** compatibility macros and functions
*/

#define lua_open()	luaL_newstate()


LUA_API void lua_setusergcfunction(lua_State *L, void (*userGCFunction)(void*));


LUA_API void lua_setfatalerrorfunction(lua_State *L, void (*fatalErrorFunc)(void));


LUALIB_API int lua_dofile (lua_State *L, const char *filename);

LUALIB_API int lua_dostring (lua_State *L, const char *str);